Fixed issue with text displaying behind navbar icons on Chrome

--- a/theme/_custom.scss
+++ b/theme/_custom.scss
@@ -12,3 +12,7 @@
 	position: relative;
 	top: -8px;
 }
+
+.rmRainmeterDevTeam-HeaderFix {
+	font-size: 0px !important;
+}
